mType/tests/testFiles/error/error/invalidParameterNameSpecialChar.mt
function testFunc(int param#1): void {
    print(param#1);
}
